--- a/books/templates/books/add_book.html
+++ b/books/templates/books/add_book.html
@@ -1,6 +1,6 @@
 {% extends 'index.html' %}
 
-{% block title %} Add New Event {% endblock %}
+{% block title %} Add New Book {% endblock %}
 
 
 {% block content %}
