--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,4 +1,20 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    
     <a class="nav-link active" aria-current="page" href="{% url 'home' %}"><h2>Books</h2></a>
+    <ul class="d-flex m-5 ">
+        {% if request.user.is_authenticated %}
+    
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="{% url 'logout'%}">LogOut</a>
+        </li>
+       {% else %}
+        <li class="nav-item m-5 ">
+        <a class="nav-link active" aria-current="page" href="{% url 'login'%}">LogIn</a>
+        </li>
+        <li class="nav-item m-5">
+            <a class="nav-link active" aria-current="page" href="{% url 'register'%}">Register</a>
+            </li>
+  {% endif %}
+    </ul>
    
   </nav>
