--- a/books/templates/books/book_list.html
+++ b/books/templates/books/book_list.html
@@ -1,28 +1,24 @@
-{% extends 'index.html' %}
-
-{% block title %} Books {% endblock %}
-
 {% block content %}
 
-<div class="container">
-    <a class="btn btn-primary my-3" href="{% url 'add_book' %}"> Add New Book </a>
 
-    <div class="row">
-        {% for book in books %}
-            <div class="col-md-4 mb-4"> 
-                <div class="card" style="width: 18rem;">
-                    <img src="{{ book.cover }}" alt="{{ book.title }}" class="card-img-top">
-                    <div class="card-body">
-                        <h5 class="card-title">{{ book.title }}</h5>
-                        <p class="card-text">{{ book.description }}</p>
-                        <p><strong>Genre:</strong> {{ book.genre }}</p>
-                        <p>Author: {{ book.Authors.author }}</p>
-                    </div>
-                </div>
+{% for book in books %}
+
+<div class="d-flex col-md-4 mb-4">
+    {% if book.id %}
+    <a href="{% url 'book_detail' book.id %}" class="text-decoration-none d-flex">
+    {% endif %}
+        <div class="card" style="width: 18rem;">
+            <img src="{{ book.cover }}" alt="{{ book.title }}" class="card-img-top">
+            <div class="card-body">
+                <h5 class="card-title">{{ book.title }}</h5>
+                <p class="card-text">{{ book.description }}</p>
+                <p><strong>Genre:</strong> {{ book.genre }}</p>
+               
+                <p>Author: </p>
+             
             </div>
-        
-        {% endfor %}
-    </div>
+        </div>
+    </a>
 </div>
-
+{% endfor %}
 {% endblock %}
