--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -8,13 +8,16 @@
           <a class="nav-link active" aria-current="page" href="{% url 'logout'%}">LogOut</a>
         </li>
        {% else %}
-        <li class="nav-item m-5 ">
+        <li class="nav-item mx-5 ">
         <a class="nav-link active" aria-current="page" href="{% url 'login'%}">LogIn</a>
         </li>
-        <li class="nav-item m-5">
+        <li class="nav-item mx-5">
             <a class="nav-link active" aria-current="page" href="{% url 'register'%}">Register</a>
-            </li>
+        </li>
   {% endif %}
     </ul>
-   
+    <form class="d-flex" role="search">
+      <input name = "query" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+      <button class="btn btn-outline-success" type="submit">Search</button>
+    </form>
   </nav>
