--- a/books/templates/books/add_book.html
+++ b/books/templates/books/add_book.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 
-<form method="post">
+<form method="post" enctype="multipart/form-data">
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit">Save</button>
