--- a/authentication/templates/authentication/login.html
+++ b/authentication/templates/authentication/login.html
@@ -23,6 +23,8 @@
                         <a href="{% url 'register' %}">Sign Up</a>
                     </form>
                </div>
+
+               {% include 'authentication/password_reset.html' %}
 <br>
 
 
