--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -13,7 +13,7 @@
         <a class="nav-link active" aria-current="page" href="{% url 'login'%}">LogIn</a>
         </li>
         <li class="nav-item mx-5">
-            <a class="nav-link active" aria-current="page" href="{% url 'register'%}">Register</a>
+            <a class="nav-link active" aria-current="page" href="{% url 'registration'%}">Register</a>
         </li>
         
   {% endif %}
